[project]
name = "qwenedit-urbanism-by-uga"
description = "Offline text-driven image editing for urban and architectural workflows using open-source Qwen-Image-Edit model in GGUF format with custom ComfyUI nodes for batch and stochastic image processing."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]


[project.urls]
Repository = "https://github.com/perezjoan/ComfyUI-QwenEdit-Urbanism-by-UGA"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/perezjoan/ComfyUI-QwenEdit-Urbanism-by-UGA/wiki"
"Bug Tracker" = "https://github.com/perezjoan/ComfyUI-QwenEdit-Urbanism-by-UGA/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-QwenEdit-Urbanism-by-UGA"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

